src/htdocs/css/responsive-table.scss
/*
	These styles were inspired by:

	Simple Little Table by John Sardine
	http://johnsardine.com/freebies/dl-html-css/simple-little-tab/

	Responsive Data Tables by Chris Coyier
	http://css-tricks.com/responsive-data-tables/

 */

$table_spacing: 1em !default;
$table_border_color: #e0e0e0 !default;
$table_background: #fff !default;

$td_color: #555 !default;
$td_padding: $table_spacing / 2 !default;
$td_background_color: #fff !default;

$th_color: #444 !default;
$th_padding: $table_spacing / 2 !default;
$th_background_color: #ededed !default;

@mixin padding() {
	padding: $table_spacing/2 $table_spacing*3/4;
}

table.tabular {
	margin:$table_spacing 0;
	border-collapse: collapse;
	font-size:0.875em;
	border:1px solid $table_border_color;
	text-align:left;
	width:100%;

	th {
		color: $th_color;
		background-color: $th_background_color;
		font-weight:bold;
		text-shadow: 1px 1px 0px #fff;
	}

	td {
		color: $th_color;
		background-color: $td_background_color;
	}

	th,
	td {
		@include padding();
		border:1px solid $table_border_color;
	}
}

table.center {
	text-align:center;
}


/*** RESPONSIVE TABLE STYLES ***/

table.responsive {
	border:none;
	text-align:left;

	/* Reset styles, display table as more of a list */
	thead, tbody, th, td, tr {
		display: block;
		border:none;
		background:none;
	}

	/* Hide table headers (but not display: none;, for accessibility) */
	> thead > tr {
		position: absolute;
		top: -9999px;
		left: -9999px;
	}

	> tbody > tr {
		margin-top: $table_spacing;

		> th:first-child {
			margin-bottom:5px;
			padding-bottom:5px;
			padding-left:0;
			border-bottom:1px solid $table_border_color;
		}

		> td:first-child {
			border-top:1px solid $table_border_color;
			padding-left: 40%;
		}

		> td:first-child,
		> td:first-child:before {
			padding-top: $table_spacing;
		}

		> td {
			position: relative;
			padding: $td_padding/5;
			padding-left: 40%;
		}

		> td:before {
			position: absolute;
			top: 0;
			left: 0;
			padding: $td_padding/5 0;
			white-space: nowrap;
		}
	}
}


@media screen and (min-width: 560px), print {

	table.center {
		text-align:center;
	}

	table.tabular {
		width:auto;
		font-size:1em;

		> tbody.no-header-style > tr > th {
			background: $td_background_color;
			font-weight: normal;
		}
	}

	table.responsive {
		border:1px solid $table_border_color;

		th {
			background-color: $th_background_color;
			border: 1px solid $table_border_color;
		}

		thead  { display: table-header-group; }
		tbody  { display: table-row-group; }
		tr     { display: table-row; }
		td, th { display: table-cell; }

		> tbody > tr {

			th, th:first-child,
			td, td:first-child {
				border: 1px solid $table_border_color;
				@include padding();
			}
		}

		> thead > tr {
			position:static;
		}
	}
}

